Fix columns width on small screens

--- a/style.css
+++ b/style.css
@@ -7477,9 +7477,16 @@ body.home {
   width: 100%;
 }
 
-.en__component--column {
+.en__component--row .en__component--column {
   min-width: auto;
 }
+
+@media only screen and (min-width: 575px) {
+  .en__component--row .en__component--column {
+    min-width: 300px;
+  }
+}
+
 
 div[class*="component--column--1"] {
   width: 100%;
